[package]
name = "web-serve"
version = "0.1.0"
authors = ["kodema5 <kodema5@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
actix-files = "0.1.4"
structopt = "0.2.18"
uuid = "0.7.4"
serde_json = "1.0.40"
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
r2d2_redis = "0.10.1"

[dependencies.postgres]
version = "0.15.2"
features = ["with-uuid", "with-serde_json"]